cls/rgw: increment header version to avoid overwriting bilog entries

Fixes: http://tracker.ceph.com/issues/21772

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 081ba106a910583851b9acdcaf5971e37a439329)